# ra_sim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  compare_intensity.py  dir_paths.yaml  et --hard a485e65  et --hard debug_feat  file_paths.yaml  ht_peak_area_numeric_results.csv  ht_peak_area_p0_results.csv  ht_peak_area_results.csv  ht_peak_area_sampling.py  ht_peak_area_sampling_results.csv  ig_graph.sqlite-shm  ig_graph.sqlite-wal  instrument.yaml  legacy_main.py  main.py  make_dissertation_figures_config.json  materials.yaml  oneline  pbi2_ht_shift_cif_corrected.py  plot_excel_scatter.py  pylock.toml  pyproject.toml  run.py  run_ra_sim.bat  session.json  setup.py  sitecustomize.py  tmp_show_init_background.py  witch -c rollback-to-26 5d6e7f8
.github/: CODEOWNERS  pull_request_template.md
.pycache_check/: main.pyc.2428113995824
benchmarks/: stacking_fault_benchmark.py
config/: debug.yaml  file_paths.example.yaml  file_paths.yaml  hbn_paths.example.yaml  hbn_paths.yaml  instrument.yaml
docs/: architecture.md  cor_rotation_math.md  debug-and-cache.md  grouped-pick-recovery.md  gui-workflow.md  gui_views.md  hbn-fitter.md  index.md  logging_readme.md  refactor_migration.md  refactor_plan.md  release-versioning.md  sim-peak-overlay-recovery.md  simulation_and_fitting.md  testing-and-validation.md  troubleshooting.md
hbn_fitter/: desktop.ini  fitter.py  optimizer.py
ra_sim/: __init__.py  __main__.py  cli.py  debug_controls.py  debug_utils.py  dev.py  dev_doctor.py  hbn.py  hbn_geometry.py  headless_geometry_fit.py  install_prereqs.py  ior_params.yaml  launcher.py  main.py  path_config.py  test_tiers.py  timing.py  user_paths.py
ra_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: geometry_fit_landscape.py  measure_gui_timing.py  plot_fig2_born_scaled_ht_near_zero.py  plot_l_axis_reflectivity_diagnostics.py
temp/: codex_full_preflight_after_seam_patch.json  codex_full_preflight_current.json  codex_new4_full_preflight_live_coverage.json  codex_new4_provider_only_live_coverage.json  geometry_fit_point_provider_report.json  historical_new4_from_b9f4a916.json  startup_capture.jsonl  theta_fix_diagnostics_target_summary.txt
tests/: README.md  Untitled-1.ipynb  analyze_simulation_debug.py  config.json  conftest.py  defaults.yaml  local_geometry.poni  (+224 more)
(+1797 files in other folders)
